src/test/ui/hkt/hkt_debug_print_nested_fail.stderr
error[E0277]: `Test` doesn't implement `Debug`
  --> $DIR/hkt_debug_print_nested_fail.rs:8:37
   |
LL | fn test<I<%J: Debug>: Debug>(input: I<Test>) {
   |                                     ^^^^^^^ `Test` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `Test`
   = note: add `#[derive(Debug)]` to `Test` or manually `impl Debug for Test`
note: required by a bound in `test::I`
  --> $DIR/hkt_debug_print_nested_fail.rs:8:15
   |
LL | fn test<I<%J: Debug>: Debug>(input: I<Test>) {
   |               ^^^^^ required by this bound in `test::I`
help: consider annotating `Test` with `#[derive(Debug)]`
   |
LL | #[derive(Debug)]
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
